--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
             - "--collation-server=utf8_unicode_ci"
         ports:
             - "${LOCAL_DB_PORT}:3306"
-        restart: on-failure:5
+        restart: no
         container_name: "${PRODUCTION_NAME}_db"
         environment:
             MYSQL_USER: wordpress
@@ -23,7 +23,7 @@ services:
         container_name: "${PRODUCTION_NAME}_wordpress"
         ports:
             - "${LOCAL_SERVER_PORT}:80"
-        restart: on-failure:5
+        restart: no
         volumes:
             - ./public:/var/www/html
         environment:
@@ -36,7 +36,7 @@ services:
         depends_on:
             - wordpress
         image: welaika/wordmove
-        restart: on-failure:5
+        restart: no
         container_name: "${PRODUCTION_NAME}_wordmove"
         volumes:
             - ./config:/home/
