--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,5 +57,10 @@ services:
       PRODUCTION_SSH_HOST: "${PRODUCTION_SSH_HOST}"
       PRODUCTION_SSH_USER: "${PRODUCTION_SSH_USER}"
       PRODUCTION_SSH_PORT: "${PRODUCTION_SSH_PORT}"
+      # WordPress DB接続用環境変数を追加
+      WORDPRESS_DB_HOST: database:3306
+      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: root
+      WORDPRESS_DB_PASSWORD: wordpress
 volumes:
   db_data:
